cmake_minimum_required(VERSION 3.28)
project(LearningMultiThreading)

set(CMAKE_CXX_STANDARD 23)

#add_executable(LearningMultiThreading main.cpp)
#add_executable(InitExample "ModernCPP/initalizersExample.cpp")
#add_executable(NullExample "ModernCPP/exampleOfNull.cpp")
#add_executable(ChronoExample "ModernCPP/exampleOfChrono.cpp")
#add_executable(AutoExample "ModernCPP/autoTypeExample.cpp")
#add_executable(LambdaExample "ModernCPP/lambdaExamples.cpp")
#add_executable(MoveSemanticsEx "ModernCPP/moveSemanticsExample.cpp")
#add_executable(Overload "ModernCPP/overloadingOnValueType.cpp")
#add_executable(Operators "ModernCPP/defaultAndDeleteExample.cpp")
#add_executable(LambdaLocal "ModernCPP/lambdaLoaclVar.cpp")
#add_executable(CaptureByMove "ModernCPP/lambdaCaptureByMove.cpp")
#add_executable(RandomGen "ModernCPP/randomGenerator.cpp")
#add_executable(UniqPtr "ModernCPP/uniquePtrsExample.cpp")

add_executable(HelloThread "Intro_to_Concurrency/helloThread.cpp")
add_executable(HelloFunctor "Intro_to_Concurrency/helloFunctor.cpp")